[emacs] Rework loading org modules

--- a/emacs.org
+++ b/emacs.org
@@ -4808,8 +4808,6 @@ templates]].
      ("C-M-e" . org-next-block))
     :hook (org-mode . org-cdlatex-mode)
     :init
-    (require 'org-protocol)
-
     ;; Setup resume clock after showing initial buffer
     (add-hook 'window-setup-hook #'org-clock-persistence-insinuate)
     :config
@@ -4846,9 +4844,8 @@ templates]].
        ("C-M-u" . outline-up-heading)))
 
     ;; General
-    (setq org-todo-keywords
-          '((sequence "TODO(t)" "STALLED(s@/!)" "|" "DONE(d!)" "ABANDONED(a@)")))
-    (setq org-export-backends '(latex beamer odt html icalendar))
+    (push 'org-protocol org-modules)
+    (push 'beamer org-export-backends)
     (org-babel-do-load-languages 'org-babel-load-languages
                                  '((C . t) ; C and C++
                                    (clojure . t)
@@ -4860,6 +4857,8 @@ templates]].
                                    (python . t)
                                    (scheme . t)
                                    (sql . t)))
+    (setq org-todo-keywords
+          '((sequence "TODO(t)" "STALLED(s@/!)" "|" "DONE(d!)" "ABANDONED(a@)")))
 
     ;; Appearance
     (setq org-adapt-indentation nil)
