--- a/emacs.org
+++ b/emacs.org
@@ -3860,6 +3860,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
       "C-c e" "editor"
       "C-c f" "files"
       "C-c j" "jump"
+      "C-c k" "media"
       "C-c o" "org"
       "C-c p" "projectile"
       "C-c w" "windows"
@@ -4257,6 +4258,107 @@ For news feeds, see [[*News feeds][News feeds]].
   (use-package calendar
     :bind
     ("C-c x a" . calendar))
+#+END_SRC
+
+** bongo - Media player
+[[https://github.com/dbrock/bongo][bongo (GitHub)]]
+
+Inserting media is cumbersome, the library buffer doesn't help. By
+contrast, inserting and immediately enqueueing media from [[*dired - File manager][dired]] sparks
+joy. The idea is from [[https://protesilaos.com/codelog/2020-08-06-emacs-bongo-extras/][Bongo media manager and extras (Protesilaos
+Stavrou)]].
+
+#+BEGIN_SRC emacs-lisp
+  (use-package bongo
+    :straight t
+    :bind
+    (("C-c x k" . bongo)
+     ("C-c k s" . bongo-seek)
+     ("C-c k f" . bongo-seek-forward-10)
+     ("C-c k b" . bongo-seek-backward-10)
+     ("C-c k a" . bongo-replay-current)
+     ("C-c k e" . bongo-perform-next-action)
+     ("C-c k n" . bongo-play-next)
+     ("C-c k p" . bongo-play-previous)
+     ("C-c k x" . bongo-stop))
+    :hook (dired-mode . bongo-dired-library-mode)
+    :preface
+    (define-advice bongo-default-library-buffer
+        (:override () koek-bngo/get-create-default-library-buffer)
+      (require 'dired)
+      (dired-noselect bongo-default-directory))
+
+    ;; Disable banner
+    (define-advice bongo-default-playlist-buffer
+        (:override () koek-bngo/get-create-default-playlist-buffer)
+      (with-current-buffer (get-buffer-create bongo-default-playlist-buffer-name)
+        (unless (derived-mode-p 'bongo-playlist-mode)
+          (bongo-playlist-mode))
+        (current-buffer)))
+
+    (defun koek-bngo/play-pause ()
+      "Pause or resume playback.
+  When playback is stopped, play from beginning."
+      (interactive)
+      (if (bongo-playing-p)
+          (bongo-pause/resume)
+        (with-bongo-playlist-buffer
+          (save-excursion
+            (goto-char (point-min))
+            (bongo-play)))))
+
+    (defun koek-bngo/enqueue (file-names &optional next)
+      "Enqueue FILE-NAMES.
+  When NEXT is truthy, enqueue after playing track, else, enqueue
+  after last track."
+      (with-temp-bongo-library-buffer
+        (dolist (file-name file-names)
+          (bongo-insert-file file-name))
+        (bongo-enqueue-region (or (and next 'insert) 'append)
+                              (point-min) (point-max)
+                              'maybe-display-playlist)))
+
+    ;; Contrary to what its signature suggests,
+    ;; `bongo-dired-enqueue-lines' enqueues only the current line
+    (defun koek-bngo/dired-enqueue-dwim (&optional arg)
+      "Enqueue current line or marked lines.
+  With `\\[universal-argument]' prefix argument ARG, enqueue after
+  playing track, else, enqueue after last track."
+      (interactive "P")
+      (let* ((file-names (dired-get-marked-files))
+             (mark-active
+              (or (> (length file-names) 1)
+                  (eq (car (dired-get-marked-files nil nil nil 'distinguish))
+                      t))))
+        (koek-bngo/enqueue file-names arg)
+        (unless mark-active
+          (dired-next-line 1))))
+
+    (defun koek-bngo/dired-enqueue-next-dwim ()
+      "Enqueue current line or marked lines after playing track."
+      (interactive)
+      (koek-bngo/dired-enqueue-dwim t))
+    :config
+    (bind-keys
+     ("C-c k k" . koek-bngo/play-pause)
+     :map bongo-dired-library-mode-map
+     ([remap bongo-dired-append-enqueue-lines] . koek-bngo/dired-enqueue-dwim)
+     ([remap bongo-dired-insert-enqueue-lines] . koek-bngo/dired-enqueue-next-dwim))
+
+    ;; General
+    (setq bongo-enabled-backends '(vlc))
+    (setq bongo-prefer-library-buffers nil)
+    (setq bongo-insert-whole-directory-trees t)
+    (setq bongo-join-inserted-tracks nil)
+    (setq bongo-display-playlist-after-enqueue nil)
+
+    ;; Appearance
+    (setq bongo-header-line-mode nil)
+    (setq bongo-mode-line-indicator-mode nil)
+    (setq bongo-mark-played-tracks t)
+    (setq bongo-track-mark-icon-file-name nil)
+    (setq bongo-display-track-icons nil)
+    :delight bongo-dired-library-mode)
 #+END_SRC
 
 * Languages
@@ -5957,6 +6059,9 @@ Define well known directories.
   (defconst koek/download-dir (koek/resolve-directory "XDG_DOWNLOAD_DIR")
     "File name to download directory.")
 
+  (defconst koek/music-dir (koek/resolve-directory "XDG_MUSIC_DIR")
+    "File name to music directory.")
+
   (defconst koek/projects-dir (koek/resolve-directory "KOEK_PROJECTS_DIR")
     "File name to projects directory.")
 
@@ -6355,6 +6460,16 @@ Configure news feeds.
                (_feed
                 feed))))
         (apply #'koek/add-feed args))))
+#+END_SRC
+
+** Media
+Configure media.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package bongo
+    :defer t
+    :config
+    (setq bongo-default-directory koek/music-dir))
 #+END_SRC
 
 ** Initial buffer
