[emacs] Reorganize dired configuration

--- a/emacs.org
+++ b/emacs.org
@@ -123,8 +123,7 @@ For org configuration, see [[*Org][Org]].
 #+BEGIN_SRC emacs-lisp
   (use-package dired
     :bind
-    (("C-c f f" . dired)
-     ("C-c f C-f" . dired-jump))
+    ("C-c f f" . dired)
     :hook (dired-mode . dired-hide-details-mode)
     :config
     (setq dired-recursive-copies 'always)
@@ -134,6 +133,11 @@ For org configuration, see [[*Org][Org]].
            (unsafe (concat safe " --group-directories-first")))
       (setq dired-listing-switches
             (or (and (executable-find "ls") unsafe) safe))))
+
+  (use-package dired-x
+    :after dired
+    :bind
+    ("C-c f C-f" . dired-jump))
 #+END_SRC
 
 *** diredfl - Visualize file properties
