[emacs] Rework setting trash action

--- a/emacs.org
+++ b/emacs.org
@@ -4025,12 +4025,14 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
     ;; When trashing e-mail, e-mail is flagged trashed. E-mail flagged
     ;; trashed is deleted by most e-mail providers. Move to trash but
     ;; don't flag trashed.
-    (setf (alist-get 'trash mu4e-marks)
-          (plist-put
-           (alist-get 'trash mu4e-marks)
-           :action
-           (lambda (docid _msg target)
-             (mu4e~proc-move docid (mu4e~mark-check-target target) "-N")))))
+    (push
+     (cons
+      'trash
+      (plist-put (alist-get 'trash mu4e-marks)
+                 :action
+                 (lambda (docid _msg target)
+                   (mu4e~proc-move docid (mu4e~mark-check-target target) "-N"))))
+     mu4e-marks))
 
   (use-package mu4e-view
     :defer t
