[emacs] Bind link-hint-open-link in apropos-mode

--- a/emacs.org
+++ b/emacs.org
@@ -3784,7 +3784,12 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 #+BEGIN_SRC emacs-lisp
   (use-package apropos
     :bind
-    ("C-c d a" . apropos))
+    ("C-c d a" . apropos)
+    :config
+    (use-package link-hint
+      :bind
+      (:map apropos-mode-map
+       ("j" . link-hint-open-link))))
 #+END_SRC
 
 ** devdocs-lookup - Search DevDocs                                    :setup:
