--- a/emacs.org
+++ b/emacs.org
@@ -3207,11 +3207,11 @@ Bury unneeded buffers, computers have more than enough memory.
     (defvar koek-wm/previous-workspace-n nil
       "Previously selected workspace number.")
 
-    (defface koek-wm/selected-workspace '((t . (:foreground "#ffffff")))
+    (defface koek-wm/selected-workspace '((t :foreground "#ffffff"))
       "Face for selected workspace label in mode line."
       :group 'exwm-workspace)
 
-    (defface koek-wm/unselected-workspace '((t . (:foreground "#000000")))
+    (defface koek-wm/unselected-workspace '((t :foreground "#000000"))
       "Face for unselected workspace label in mode line."
       :group 'exwm-workspace)
 
@@ -3280,7 +3280,7 @@ Bury unneeded buffers, computers have more than enough memory.
   (use-package exwm-floating
     :defer t
     :preface
-    (defface koek-wm/floating-border '((t . (:foreground "#000000")))
+    (defface koek-wm/floating-border '((t :foreground "#000000"))
       "Face for border of floating frames."
       :group 'exwm-floating)
 
@@ -4269,8 +4269,7 @@ For news feeds, see [[*News feeds][News feeds]].
     :straight pdf-tools
     :mode ((rx ".pdf" string-end) . pdf-view-mode)
     :preface
-    (defface koek-pdf/midnight
-      '((t . (:foreground "#000000" :background "#ffffff")))
+    (defface koek-pdf/midnight '((t :foreground "#000000" :background "#ffffff"))
       "Face for page when `pdf-view-midnight-minor-mode' is enabled."
       :group 'pdf-view)
 
